[gd_scene load_steps=4 format=3 uid="uid://m1rfat6c7uhj"]

[ext_resource type="Script" path="res://scenes/interface_base/home/event_log_entry.gd" id="1_hbj76"]
[ext_resource type="PackedScene" uid="uid://lt08ltq12ss6" path="res://scenes/hero_slot/hero_portrait_slot.tscn" id="2_2x5n3"]
[ext_resource type="PackedScene" uid="uid://crp36l631uhwm" path="res://scenes/interface_base/crafting/loot_grid.tscn" id="2_l02s0"]

[node name="EventLogEntry" type="Control" groups=["game_events"]]
custom_minimum_size = Vector2(0, 1000)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hbj76")
hero_slot_scene = ExtResource("2_2x5n3")

[node name="Background" type="PanelContainer" parent="."]
clip_contents = true
custom_minimum_size = Vector2(0, 500)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MC" type="MarginContainer" parent="Background"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ScrollContainer" type="ScrollContainer" parent="Background/MC"]
layout_mode = 2

[node name="VB" type="VBoxContainer" parent="Background/MC/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="HB" type="HBoxContainer" parent="Background/MC/ScrollContainer/VB"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Background/MC/ScrollContainer/VB/HB"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "Match over - "

[node name="ResultLabel" type="Label" parent="Background/MC/ScrollContainer/VB/HB"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "Win"

[node name="MatchLengthLabel" type="Label" parent="Background/MC/ScrollContainer/VB/HB"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"HeaderMedium"
text = "0:00"

[node name="HB3" type="HBoxContainer" parent="Background/MC/ScrollContainer/VB"]
layout_mode = 2

[node name="ExpLabel" type="Label" parent="Background/MC/ScrollContainer/VB/HB3"]
unique_name_in_owner = true
modulate = Color(1, 1, 0, 1)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderSmall"
text = "Experience gained: "

[node name="CurrencyLabel" type="Label" parent="Background/MC/ScrollContainer/VB/HB3"]
unique_name_in_owner = true
modulate = Color(1, 1, 0, 1)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderSmall"
text = "Rubber Duckies gained: "

[node name="HB2" type="HBoxContainer" parent="Background/MC/ScrollContainer/VB"]
layout_mode = 2

[node name="FriendlyTeamVB" type="VBoxContainer" parent="Background/MC/ScrollContainer/VB/HB2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FriendlyTeamLabel" type="Label" parent="Background/MC/ScrollContainer/VB/HB2/FriendlyTeamVB"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderSmall"
text = "Buddy Team:"

[node name="TeamHB" type="HBoxContainer" parent="Background/MC/ScrollContainer/VB/HB2/FriendlyTeamVB"]
unique_name_in_owner = true
layout_mode = 2

[node name="LootGrid" parent="Background/MC/ScrollContainer/VB" instance=ExtResource("2_l02s0")]
unique_name_in_owner = true
layout_mode = 2
loot_reward = true
